# ojs

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  GOVERNANCE.md  LICENSE-APACHE  LICENSE-CC0  README.md
docs/domains/: README.md  ai_commerce.md  artisan.md  audit.md  body.md  care.md  certification.md  commerce.md  estate.md  identity.md  legal.md  media.md  metals.md  pearls.md  relationships.md  religious.md  reviews.md  setting.md  sizing.md  smart.md  stones.md  style.md  sustainability.md  watch.md
docs/integrations/: README.md  shopify-integration.md  woocommerce-integration.md
docs/specs/: 2026-05-24-v0.1-coverage-backport-design.md
examples/: body-piercing.json  engagement-ring.json  pearl-necklace.json  smart-ring.json  vintage-watch.json
examples/contrib/: ada-double-pearl-drop-earrings.json  aurora-lab-grown-sapphire-eternity-ring.json  baguette-emerald-open-ring.json  bezel-lab-grown-diamond-zig-zag-ring.json  black-onyx-square-signet-ring.json  bold-diamond-eternity-ring.json  bold-herringbone-chain-necklace.json  braided-ring.json  charlotte-ring.json  dome-ring.json  drop-shot-tennis-earrings.json  essential-pearl-earrings-white.json  lacey-lab-grown-diamond-ring.json  mega-dome-earrings.json  mini-heart-pave-diamond-stud-earrings.json  organic-dome-thin-marquise-cut-nesting-ring.json  pave-diamond-wishbone-ring.json  pearl-half-eternity-ring.json  signet-ring.json  stacker-ring.json
spec/v1/: context.jsonld  ojs-strict.json
src/python/: pyproject.toml
src/python/ojs/: __init__.py  generate_codelists.py  generate_schema.py
src/python/ojs/models/: __init__.py  _common.py  ai_commerce.py  artisan.py  body.py  care.py  certification.py  commerce.py  estate.py  identity.py  jewelry_product.py  legal.py  media.py  metals.py  pearls.py  relationships.py  religious.py  reviews.py  setting.py  sizing.py  smart.py  stones.py  style.py  sustainability.py  watch.py
src/python/ojs/transformers/: __init__.py  acp.py  gmc.py  mcp.py  perplexity.py  schema_org.py  shopify.py  ucp.py
tests/: test_ojs.py  validate_examples.py
tools/migrate-v0.1/: migrate.py
tools/validate-node/: README.md  package-lock.json  package.json
(+77 files in other folders)
